--- a/src/style.css
+++ b/src/style.css
@@ -22,9 +22,14 @@ h1 {
   font-size: 96px;
   font-weight: bold;
 }
+h2 {
+    font-size: 46px;
+}
 p {
   font-family: var(--default-font-family);
   font-weight: normal;
+  font-size: 16px;
+  line-height: 30px;
 }
 .hero {
   background: var(--secondary-color);
@@ -42,7 +47,7 @@ p {
   font-family: var(--default-font-family)
   font-weight: normal;
   font-size: 24px;
-  line-height: 2;
+  line-height: 1.5;
 }
 .btn-branding {
   background: var(--branding-color);
@@ -51,4 +56,31 @@ p {
   font-size: 18px;
   line-height: 27px;
   padding: 15px 30px;
+}
+.btn-branding-outline {
+    color: var(--branding-color);
+    border: 1px solid var(--branding-color);
+    border-radius: 4px;
+    font-size: 18px;
+    line-height: 27px;
+    padding: 15px 30px;
+}
+.project-description {
+    padding: 120px 60px;
+}
+@media (max-width: 900px) {
+    h1 {
+        font-size: 44px;
+        line-height: 2;
+    }
+    h2 {
+        font-size: 44px;
+    }
+    .project-description {
+        padding: 0;
+        text-align: center;
+    }
+    .hero {
+        padding: 80px 20px;
+    }
 }
