--- a/src/style.css
+++ b/src/style.css
@@ -139,14 +139,24 @@ a:hover {
 .project-content h3 {
     font-size: 24px;
     line-height: 1.5;
-    margin: 20px 0 0;
+    margin: 30px 0 0;
     font-family: var(--default-font-family);
 }
 .project-content p {
     font-size: 14px;
 }
+.project-content img {
+  transition: all .3s ease;
+}
+.project-content img:hover {
+  transform: scale(1.1);
+  transition: all .3s ease;
+}
 .project-content {
   margin: 30px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
 
