--- a/src/style.css
+++ b/src/style.css
@@ -99,7 +99,7 @@ a:hover {
 .email-link {
   display: flex;
   justify-content: center;
-  color: var(--primary-color);
+  color: var(--branding-color);
   font-size: 28px;
   text-decoration: none;
 }
@@ -137,20 +137,20 @@ a:hover {
   font-family: var(--default-font-family);
 }
 .project-content h3 {
-    font-size: 24px;
-    line-height: 1.5;
-    margin: 30px 0 0;
-    font-family: var(--default-font-family);
+  font-size: 24px;
+  line-height: 1.5;
+  margin: 30px 0 0;
+  font-family: var(--default-font-family);
 }
 .project-content p {
-    font-size: 14px;
+  font-size: 14px;
 }
 .project-content img {
-  transition: all .3s ease;
+  transition: all 0.3s ease;
 }
 .project-content img:hover {
   transform: scale(1.1);
-  transition: all .3s ease;
+  transition: all 0.3s ease;
 }
 .project-content {
   margin: 30px;
@@ -158,7 +158,9 @@ a:hover {
   flex-direction: row;
   justify-content: space-between;
 }
-
+.navbar {
+  background: var(--secondary-color) !important;
+}
 
 @media (max-width: 900px) {
   h1 {
@@ -216,7 +218,7 @@ a:hover {
     padding: 0;
     margin-top: 30px;
   }
-   .project-section {
+  .project-section {
     text-align: center;
     padding: 0;
     margin-top: 30px;
