--- a/src/style.css
+++ b/src/style.css
@@ -129,7 +129,7 @@ a:hover {
   padding: 20px;
 }
 .project-section h1 {
-  font-size: 64px;
+  font-size: 60px;
   line-height: 80px;
 }
 .project-section h2 {
@@ -187,6 +187,9 @@ a:hover {
     padding: 0;
     margin-top: 30px;
   }
+  .project-section h1 {
+  font-size: 44px;
+  line-height: 1.5;
 }
 
 @media (max-width: 576px) {
@@ -198,6 +201,7 @@ a:hover {
   h1 {
     font-size: 40px;
     line-height: 2;
+    text-align: center;
   }
   h2 {
     font-size: 34px;
@@ -219,10 +223,13 @@ a:hover {
     margin-top: 30px;
   }
   .project-section {
-    text-align: center;
     padding: 0;
     margin-top: 30px;
   }
+   .project-section h1 {
+  font-size: 44px;
+  line-height: 1.5;
+   }
   img {
     display: 80%;
   }
