--- a/src/header.css
+++ b/src/header.css
@@ -11,6 +11,22 @@
 }
 .active {
 }
+.btn-branding {
+  background: var(--branding-color);
+  border-radius: 4px;
+  color: white;
+  font-size: 18px;
+  line-height: 27px;
+  padding: 15px 30px;
+}
+.btn-branding-outline {
+  color: var(--branding-color);
+  border: 1px solid var(--branding-color);
+  border-radius: 4px;
+  font-size: 18px;
+  line-height: 27px;
+  padding: 15px 30px;
+}
 nav {
   padding: 20px 0;
 }
@@ -32,4 +48,49 @@ nav a {
 nav a:hover,
 nav li.active a {
   color: var(--branding-color);
+}
+footer {
+    margin: 60px 0 ;
+}
+footer .email-link {
+    text-decoration: none;
+    color: black;
+    font-size: 24px;
+    text-align: center;
+}
+footer .email-link:hover {
+    color: var(--branding-color);
+}
+footer .social-link a {
+    margin: 0 20px;
+    color: var(--branding-color);
+    background: var(--secondary-color);
+    padding: 10px 14px;
+    border-radius: 50%;
+    font-size: 18px;
+    transition: all 100ms ease-in-out;
+}
+footer .social-link a hover {
+    color: white;
+    background-color: var(--branding-color);
+}
+footer .contact-box {
+    background:  var(--secondary-color);
+    padding: 30px 120px;
+    border-radius: 10px;
+}
+footer .contact-box h4 {
+    font-size: 48px;
+}
+footer .contact-box p {
+    margin: 0;
+}
+@media (max-width: 576px) {
+    h4 {
+        font-size: 26px;
+    }
+
+    footer .contact-box {
+    padding: 30px;
+}
 }
