--- a/src/style.css
+++ b/src/style.css
@@ -31,6 +31,9 @@ p {
   font-size: 16px;
   line-height: 30px;
 }
+.active {
+  color: var(--branding-color) !important;
+}
 .hero {
   background: var(--secondary-color);
   text-align: center;
@@ -57,6 +60,10 @@ p {
   line-height: 27px;
   padding: 15px 30px;
 }
+.btn-branding:hover {
+  background: var(--branding-color);
+  color: black;
+}
 .btn-branding-outline {
   color: var(--branding-color);
   border: 1px solid var(--branding-color);
@@ -65,6 +72,7 @@ p {
   line-height: 27px;
   padding: 15px 30px;
 }
+
 .project-description {
   padding: 120px 60px;
 }
